tests/test_input_files/good/test_good_float_4.punkt
main {
  const A = alloc [float] (5).
  println A.
}
