tests/test_input_files/bad/test_bad_array_13.punkt
main {
	const x = 5.
	println x[0].
}
